# xscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  common.c  common.h  config.h  fd.c  fd.h  global.h  main.c  proto.h  scope.c  scope.h  tablenas.c  x11.h  xstats.c
app/core/: conn-context.c  conn-context.h  core-log.h  core.cmake  event.c  event.h  global.c  global.h  print_x11.c  server.c  server.h  tools.c  tools.h  xproto.c  xproto.h  xserver.c  xserver.h  xtype-builtin.c  xtype-builtin.h
app/core/decode/: decode-extensions.c  decode-extensions.h  decode-xclient.c  decode-xclient.h  decode-xserver.c  decode-xserver.h  decode.c  decode.h  decode_x11.c  decode_x11.h
app/core/io/: io.c  io.h
app/core/print/: print-type.c  print-type.h
app/core/proto/: xproto.c  xproto.h  xtype-atom.c  xtype-atom.h  xtype-builtin.c  xtype-common.c  xtype-common.h  xtype-enumerated.c  xtype-enumerated.h  xtype-record.c  xtype-record.h  xtype-set.c  xtype-set.h  xtype-values.c  xtype-values.h
